# plugdrop-compiler

./: CMakeLists.txt  Dockerfile  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  build.sh  entrypoint.sh
.github/workflows/: build-plugin.yml  main.yml
plugins/AtmosphereDynamics/: CMakeLists.txt
plugins/AtmosphereDynamics/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ChorusWave/: CMakeLists.txt
plugins/ChorusWave/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/ClearCutGate/: CMakeLists.txt
plugins/ClearCutGate/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/GainCraft/: CMakeLists.txt
plugins/GainCraft/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/GainGuard/: CMakeLists.txt
plugins/GainGuard/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GateKeeper/: CMakeLists.txt
plugins/GateKeeper/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/LevelLift/: CMakeLists.txt
plugins/LevelLift/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/PrecisionBoost/: CMakeLists.txt
plugins/PrecisionBoost/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/PureTubeGlow/: CMakeLists.txt
plugins/PureTubeGlow/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/SilenceSculptor/: CMakeLists.txt
plugins/SilenceSculptor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SpectrumSculptor/: CMakeLists.txt
plugins/SpectrumSculptor/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
plugins/TapeWarmth/: CMakeLists.txt
plugins/TapeWarmth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/TubeGlow/: CMakeLists.txt
plugins/TubeGlow/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/VelvetGlow/: CMakeLists.txt
plugins/VelvetGlow/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/VelvetSaturation/: CMakeLists.txt
plugins/VelvetSaturation/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/WarmTubeDrive/: CMakeLists.txt
plugins/WarmTubeDrive/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/WarmthEngine/: CMakeLists.txt
plugins/WarmthEngine/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/WarmthWave/: CMakeLists.txt
plugins/WarmthWave/Source/: PluginEditor.cpp  PluginProcessor.cpp
